# MIni_drop

./: .gitignore  1——黄芷媛.docx  LICENSE  Makefile  Mini-Drop+题目.md  README.md  docker-compose.yml  drop系统复刻指南.md  ~$项目学习笔记.docx  设计文档.md  项目学习笔记.docx
analysis/: Dockerfile  analysis_advisor.py  error.py  hotmethod_analyzer.py  hotmethod_common.py  llm_advisor.py  poll_worker.py  requirements.txt  rules.yaml  storage.py
analysis/data_parser/: collapsed_data_parser.py
apiserver/: Dockerfile  apiserver.yaml  apiserver.yaml.example  go.mod  go.sum  main.go
apiserver/config/: config.go
apiserver/middleware/: cors.go  log.go
apiserver/model/: models.go
apiserver/pkg/storage/: storage.go
apiserver/pkg/storage/minio/: minio.go
apiserver/proto/control/: control.pb.go  control_grpc.pb.go
apiserver/proto/drop/: common.pb.go
apiserver/proto/hotmethod/: hotmethod.pb.go  hotmethod_grpc.pb.go
apiserver/server/: agent.go  auth.go  const_enum.go  heartbeat_watchdog.go  server.go  suggestion.go  task.go  user.go
apiserver/util/: db.go  httpclient.go  log.go  storage.go
drop/: CMakeLists.txt  Dockerfile
drop/agent/: Config.cpp  Config.h  HealthCheckChannel.cpp  HealthCheckChannel.h  HotmethodChannel.cpp  HotmethodChannel.h  main.cpp
drop/common/: COSClient.cpp  COSClient.h  Daemon.cpp  Daemon.h  Log.cpp  Log.h  Perf.cpp  Perf.h  Process.cpp  Process.h
drop/common/proto/: common.proto  control.proto  healthcheck.proto  hotmethod.proto  init.proto
drop/common/proto_gen/cpp/: common.pb.cc  common.pb.h  control.pb.cc  control.pb.h  healthcheck.pb.cc  healthcheck.pb.h  hotmethod.pb.cc  hotmethod.pb.h  init.pb.cc  init.pb.h
drop/etc/: config.json.example
drop/server/: ControlService.cpp  ControlService.h  HealthCheckService.cpp  HealthCheckService.h  HotmethodService.cpp  HotmethodService.h  InitAgentInfoService.cpp  InitAgentInfoService.h  main.cpp
web_frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
web_frontend/src/: App.jsx  index.jsx  router.tsx
web_frontend/src/api/: index.js
web_frontend/src/components/createTaskModal/: index.jsx
web_frontend/src/components/flamegraph/: index.jsx
web_frontend/src/components/header/: index.jsx
web_frontend/src/pages/home/: index.jsx
web_frontend/src/pages/login/: index.jsx
web_frontend/src/pages/taskList/: index.jsx
web_frontend/src/pages/taskResult/: index.jsx
web_frontend/src/store/: index.js
